compilateur/lex.output
Grammaire

    0 $accept: program $end

    1 program: declaration_list

    2 $@1: %empty

    3 body: tLBRACE $@1 statement_list tRBRACE

    4 declaration_list: %empty
    5                 | declaration declaration_list

    6 declaration: int_declaration_statement
    7            | function_declaration

    8 statement_list: %empty
    9               | statement statement_list

   10 statement: affectation_statement
   11          | print_statement
   12          | if_statement
   13          | while_statement
   14          | int_declaration_statement
   15          | function_declaration
   16          | return_statement

   17 return_statement: tRETURN expression tSEMI

   18 $@2: %empty

   19 function_declaration: tINT tID $@2 tLPAREN parameters_declaration tRPAREN body

   20 $@3: %empty

   21 function_declaration: tVOID tID $@3 tLPAREN parameters_declaration tRPAREN body

   22 parameters_declaration: tVOID
   23                       | parameters_i_declaration_list
   24                       | %empty

   25 parameters_i_declaration_list: parameter_declaration
   26                              | parameter_declaration tCOMMA parameters_i_declaration_list

   27 parameter_declaration: tINT tID

   28 affectation_statement: affectation_list tSEMI

   29 affectation_list: affectation
   30                 | affectation tCOMMA affectation_list

   31 affectation: tID tASSIGN expression

   32 declaration_affectation: tID tASSIGN expression

   33 print_statement: tPRINT tLPAREN expression tRPAREN tSEMI

   34 if_jmp: %empty

   35 else_jmp: %empty

   36 if_statement: tIF tLPAREN condition if_jmp tRPAREN body
   37             | tIF tLPAREN condition if_jmp tRPAREN body else_jmp tELSE body

   38 while_loop: %empty

   39 while_jmp: %empty

   40 while_statement: tWHILE while_loop tLPAREN condition tRPAREN while_jmp body

   41 int_declaration_statement: tINT int_declaration_list tSEMI

   42 int_declaration_list: int_declaration
   43                     | int_declaration tCOMMA int_declaration_list

   44 int_declaration: tID
   45                | declaration_affectation

   46 expression: expression tADD expression
   47           | expression tSUB expression
   48           | expression tMUL expression
   49           | expression tDIV expression
   50           | tLPAREN expression tRPAREN
   51           | tNB
   52           | tID
   53           | function

   54 $@4: %empty

   55 $@5: %empty

   56 function: tID $@4 tLPAREN $@5 expression_list tRPAREN

   57 expression_list: %empty
   58                | expression
   59                | expression tCOMMA expression_list

   60 condition: expression tEQ expression
   61          | expression tNE expression
   62          | expression tLT expression
   63          | expression tGT expression
   64          | expression tGE expression
   65          | expression tLE expression
   66          | condition tAND condition
   67          | condition tOR condition
   68          | tNOT condition
   69          | tLPAREN condition tRPAREN


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tIF (258) 36 37
    tELSE (259) 37
    tWHILE (260) 40
    tPRINT (261) 33
    tRETURN (262) 17
    tINT (263) 19 27 41
    tVOID (264) 21 22
    tADD (265) 46
    tSUB (266) 47
    tMUL (267) 48
    tDIV (268) 49
    tLT (269) 62
    tGT (270) 63
    tNE (271) 61
    tEQ (272) 60
    tGE (273) 64
    tLE (274) 65
    tASSIGN (275) 31 32
    tAND (276) 66
    tOR (277) 67
    tNOT (278) 68
    tLBRACE (279) 3
    tRBRACE (280) 3
    tLPAREN (281) 19 21 33 36 37 40 50 56 69
    tRPAREN (282) 19 21 33 36 37 40 50 56 69
    tCOMMA (283) 26 30 43 59
    tSEMI (284) 17 28 33 41
    tNB <NUMBER> (285) 51
    tID <IDENTIFIER> (286) 19 21 27 31 32 44 52 56


Non-terminaux, suivis des règles où ils apparaissent

    $accept (32)
        à gauche: 0
    program (33)
        à gauche: 1
        à droite: 0
    body (34)
        à gauche: 3
        à droite: 19 21 36 37 40
    $@1 (35)
        à gauche: 2
        à droite: 3
    declaration_list (36)
        à gauche: 4 5
        à droite: 1 5
    declaration (37)
        à gauche: 6 7
        à droite: 5
    statement_list (38)
        à gauche: 8 9
        à droite: 3 9
    statement (39)
        à gauche: 10 11 12 13 14 15 16
        à droite: 9
    return_statement (40)
        à gauche: 17
        à droite: 16
    function_declaration (41)
        à gauche: 19 21
        à droite: 7 15
    $@2 (42)
        à gauche: 18
        à droite: 19
    $@3 (43)
        à gauche: 20
        à droite: 21
    parameters_declaration (44)
        à gauche: 22 23 24
        à droite: 19 21
    parameters_i_declaration_list (45)
        à gauche: 25 26
        à droite: 23 26
    parameter_declaration (46)
        à gauche: 27
        à droite: 25 26
    affectation_statement (47)
        à gauche: 28
        à droite: 10
    affectation_list (48)
        à gauche: 29 30
        à droite: 28 30
    affectation (49)
        à gauche: 31
        à droite: 29 30
    declaration_affectation (50)
        à gauche: 32
        à droite: 45
    print_statement (51)
        à gauche: 33
        à droite: 11
    if_jmp (52)
        à gauche: 34
        à droite: 36 37
    else_jmp (53)
        à gauche: 35
        à droite: 37
    if_statement (54)
        à gauche: 36 37
        à droite: 12
    while_loop (55)
        à gauche: 38
        à droite: 40
    while_jmp (56)
        à gauche: 39
        à droite: 40
    while_statement (57)
        à gauche: 40
        à droite: 13
    int_declaration_statement (58)
        à gauche: 41
        à droite: 6 14
    int_declaration_list (59)
        à gauche: 42 43
        à droite: 41 43
    int_declaration (60)
        à gauche: 44 45
        à droite: 42 43
    expression (61)
        à gauche: 46 47 48 49 50 51 52 53
        à droite: 17 31 32 33 46 47 48 49 50 58 59 60 61 62 63 64 65
    function (62)
        à gauche: 56
        à droite: 53
    $@4 (63)
        à gauche: 54
        à droite: 56
    $@5 (64)
        à gauche: 55
        à droite: 56
    expression_list (65)
        à gauche: 57 58 59
        à droite: 56 59
    condition (66)
        à gauche: 60 61 62 63 64 65 66 67 68 69
        à droite: 36 37 40 66 67 68 69


État 0

    0 $accept: . program $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 4 (declaration_list)

    program                    aller à l'état 3
    declaration_list           aller à l'état 4
    declaration                aller à l'état 5
    function_declaration       aller à l'état 6
    int_declaration_statement  aller à l'état 7


État 1

   19 function_declaration: tINT . tID $@2 tLPAREN parameters_declaration tRPAREN body
   41 int_declaration_statement: tINT . int_declaration_list tSEMI

    tID  décalage et aller à l'état 8

    declaration_affectation  aller à l'état 9
    int_declaration_list     aller à l'état 10
    int_declaration          aller à l'état 11


État 2

   21 function_declaration: tVOID . tID $@3 tLPAREN parameters_declaration tRPAREN body

    tID  décalage et aller à l'état 12


État 3

    0 $accept: program . $end

    $end  décalage et aller à l'état 13


État 4

    1 program: declaration_list .

    $défaut  réduction par utilisation de la règle 1 (program)


État 5

    5 declaration_list: declaration . declaration_list

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2

    $défaut  réduction par utilisation de la règle 4 (declaration_list)

    declaration_list           aller à l'état 14
    declaration                aller à l'état 5
    function_declaration       aller à l'état 6
    int_declaration_statement  aller à l'état 7


État 6

    7 declaration: function_declaration .

    $défaut  réduction par utilisation de la règle 7 (declaration)


État 7

    6 declaration: int_declaration_statement .

    $défaut  réduction par utilisation de la règle 6 (declaration)


État 8

   19 function_declaration: tINT tID . $@2 tLPAREN parameters_declaration tRPAREN body
   32 declaration_affectation: tID . tASSIGN expression
   44 int_declaration: tID .

    tASSIGN  décalage et aller à l'état 15

    tLPAREN   réduction par utilisation de la règle 18 ($@2)
    $défaut  réduction par utilisation de la règle 44 (int_declaration)

    $@2  aller à l'état 16


État 9

   45 int_declaration: declaration_affectation .

    $défaut  réduction par utilisation de la règle 45 (int_declaration)


État 10

   41 int_declaration_statement: tINT int_declaration_list . tSEMI

    tSEMI  décalage et aller à l'état 17


État 11

   42 int_declaration_list: int_declaration .
   43                     | int_declaration . tCOMMA int_declaration_list

    tCOMMA  décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 42 (int_declaration_list)


État 12

   21 function_declaration: tVOID tID . $@3 tLPAREN parameters_declaration tRPAREN body

    $défaut  réduction par utilisation de la règle 20 ($@3)

    $@3  aller à l'état 19


État 13

    0 $accept: program $end .

    $défaut  accepter


État 14

    5 declaration_list: declaration declaration_list .

    $défaut  réduction par utilisation de la règle 5 (declaration_list)


État 15

   32 declaration_affectation: tID tASSIGN . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 23
    function    aller à l'état 24


État 16

   19 function_declaration: tINT tID $@2 . tLPAREN parameters_declaration tRPAREN body

    tLPAREN  décalage et aller à l'état 25


État 17

   41 int_declaration_statement: tINT int_declaration_list tSEMI .

    $défaut  réduction par utilisation de la règle 41 (int_declaration_statement)


État 18

   43 int_declaration_list: int_declaration tCOMMA . int_declaration_list

    tID  décalage et aller à l'état 26

    declaration_affectation  aller à l'état 9
    int_declaration_list     aller à l'état 27
    int_declaration          aller à l'état 11


État 19

   21 function_declaration: tVOID tID $@3 . tLPAREN parameters_declaration tRPAREN body

    tLPAREN  décalage et aller à l'état 28


État 20

   50 expression: tLPAREN . expression tRPAREN

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 29
    function    aller à l'état 24


État 21

   51 expression: tNB .

    $défaut  réduction par utilisation de la règle 51 (expression)


État 22

   52 expression: tID .
   56 function: tID . $@4 tLPAREN $@5 expression_list tRPAREN

    tLPAREN   réduction par utilisation de la règle 54 ($@4)
    $défaut  réduction par utilisation de la règle 52 (expression)

    $@4  aller à l'état 30


État 23

   32 declaration_affectation: tID tASSIGN expression .
   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression

    tADD  décalage et aller à l'état 31
    tSUB  décalage et aller à l'état 32
    tMUL  décalage et aller à l'état 33
    tDIV  décalage et aller à l'état 34

    $défaut  réduction par utilisation de la règle 32 (declaration_affectation)


État 24

   53 expression: function .

    $défaut  réduction par utilisation de la règle 53 (expression)


État 25

   19 function_declaration: tINT tID $@2 tLPAREN . parameters_declaration tRPAREN body

    tINT   décalage et aller à l'état 35
    tVOID  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 24 (parameters_declaration)

    parameters_declaration         aller à l'état 37
    parameters_i_declaration_list  aller à l'état 38
    parameter_declaration          aller à l'état 39


État 26

   32 declaration_affectation: tID . tASSIGN expression
   44 int_declaration: tID .

    tASSIGN  décalage et aller à l'état 15

    $défaut  réduction par utilisation de la règle 44 (int_declaration)


État 27

   43 int_declaration_list: int_declaration tCOMMA int_declaration_list .

    $défaut  réduction par utilisation de la règle 43 (int_declaration_list)


État 28

   21 function_declaration: tVOID tID $@3 tLPAREN . parameters_declaration tRPAREN body

    tINT   décalage et aller à l'état 35
    tVOID  décalage et aller à l'état 36

    $défaut  réduction par utilisation de la règle 24 (parameters_declaration)

    parameters_declaration         aller à l'état 40
    parameters_i_declaration_list  aller à l'état 38
    parameter_declaration          aller à l'état 39


État 29

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression
   50           | tLPAREN expression . tRPAREN

    tADD     décalage et aller à l'état 31
    tSUB     décalage et aller à l'état 32
    tMUL     décalage et aller à l'état 33
    tDIV     décalage et aller à l'état 34
    tRPAREN  décalage et aller à l'état 41


État 30

   56 function: tID $@4 . tLPAREN $@5 expression_list tRPAREN

    tLPAREN  décalage et aller à l'état 42


État 31

   46 expression: expression tADD . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 43
    function    aller à l'état 24


État 32

   47 expression: expression tSUB . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 44
    function    aller à l'état 24


État 33

   48 expression: expression tMUL . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 45
    function    aller à l'état 24


État 34

   49 expression: expression tDIV . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 46
    function    aller à l'état 24


État 35

   27 parameter_declaration: tINT . tID

    tID  décalage et aller à l'état 47


État 36

   22 parameters_declaration: tVOID .

    $défaut  réduction par utilisation de la règle 22 (parameters_declaration)


État 37

   19 function_declaration: tINT tID $@2 tLPAREN parameters_declaration . tRPAREN body

    tRPAREN  décalage et aller à l'état 48


État 38

   23 parameters_declaration: parameters_i_declaration_list .

    $défaut  réduction par utilisation de la règle 23 (parameters_declaration)


État 39

   25 parameters_i_declaration_list: parameter_declaration .
   26                              | parameter_declaration . tCOMMA parameters_i_declaration_list

    tCOMMA  décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 25 (parameters_i_declaration_list)


État 40

   21 function_declaration: tVOID tID $@3 tLPAREN parameters_declaration . tRPAREN body

    tRPAREN  décalage et aller à l'état 50


État 41

   50 expression: tLPAREN expression tRPAREN .

    $défaut  réduction par utilisation de la règle 50 (expression)


État 42

   56 function: tID $@4 tLPAREN . $@5 expression_list tRPAREN

    $défaut  réduction par utilisation de la règle 55 ($@5)

    $@5  aller à l'état 51


État 43

   46 expression: expression . tADD expression
   46           | expression tADD expression .
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression

    $défaut  réduction par utilisation de la règle 46 (expression)


État 44

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   47           | expression tSUB expression .
   48           | expression . tMUL expression
   49           | expression . tDIV expression

    $défaut  réduction par utilisation de la règle 47 (expression)


État 45

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   48           | expression tMUL expression .
   49           | expression . tDIV expression

    $défaut  réduction par utilisation de la règle 48 (expression)


État 46

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression
   49           | expression tDIV expression .

    $défaut  réduction par utilisation de la règle 49 (expression)


État 47

   27 parameter_declaration: tINT tID .

    $défaut  réduction par utilisation de la règle 27 (parameter_declaration)


État 48

   19 function_declaration: tINT tID $@2 tLPAREN parameters_declaration tRPAREN . body

    tLBRACE  décalage et aller à l'état 52

    body  aller à l'état 53


État 49

   26 parameters_i_declaration_list: parameter_declaration tCOMMA . parameters_i_declaration_list

    tINT  décalage et aller à l'état 35

    parameters_i_declaration_list  aller à l'état 54
    parameter_declaration          aller à l'état 39


État 50

   21 function_declaration: tVOID tID $@3 tLPAREN parameters_declaration tRPAREN . body

    tLBRACE  décalage et aller à l'état 52

    body  aller à l'état 55


État 51

   56 function: tID $@4 tLPAREN $@5 . expression_list tRPAREN

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 57 (expression_list)

    expression       aller à l'état 56
    function         aller à l'état 24
    expression_list  aller à l'état 57


État 52

    3 body: tLBRACE . $@1 statement_list tRBRACE

    $défaut  réduction par utilisation de la règle 2 ($@1)

    $@1  aller à l'état 58


État 53

   19 function_declaration: tINT tID $@2 tLPAREN parameters_declaration tRPAREN body .

    $défaut  réduction par utilisation de la règle 19 (function_declaration)


État 54

   26 parameters_i_declaration_list: parameter_declaration tCOMMA parameters_i_declaration_list .

    $défaut  réduction par utilisation de la règle 26 (parameters_i_declaration_list)


État 55

   21 function_declaration: tVOID tID $@3 tLPAREN parameters_declaration tRPAREN body .

    $défaut  réduction par utilisation de la règle 21 (function_declaration)


État 56

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression
   58 expression_list: expression .
   59                | expression . tCOMMA expression_list

    tADD    décalage et aller à l'état 31
    tSUB    décalage et aller à l'état 32
    tMUL    décalage et aller à l'état 33
    tDIV    décalage et aller à l'état 34
    tCOMMA  décalage et aller à l'état 59

    $défaut  réduction par utilisation de la règle 58 (expression_list)


État 57

   56 function: tID $@4 tLPAREN $@5 expression_list . tRPAREN

    tRPAREN  décalage et aller à l'état 60


État 58

    3 body: tLBRACE $@1 . statement_list tRBRACE

    tIF      décalage et aller à l'état 61
    tWHILE   décalage et aller à l'état 62
    tPRINT   décalage et aller à l'état 63
    tRETURN  décalage et aller à l'état 64
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tID      décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 8 (statement_list)

    statement_list             aller à l'état 66
    statement                  aller à l'état 67
    return_statement           aller à l'état 68
    function_declaration       aller à l'état 69
    affectation_statement      aller à l'état 70
    affectation_list           aller à l'état 71
    affectation                aller à l'état 72
    print_statement            aller à l'état 73
    if_statement               aller à l'état 74
    while_statement            aller à l'état 75
    int_declaration_statement  aller à l'état 76


État 59

   59 expression_list: expression tCOMMA . expression_list

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 57 (expression_list)

    expression       aller à l'état 56
    function         aller à l'état 24
    expression_list  aller à l'état 77


État 60

   56 function: tID $@4 tLPAREN $@5 expression_list tRPAREN .

    $défaut  réduction par utilisation de la règle 56 (function)


État 61

   36 if_statement: tIF . tLPAREN condition if_jmp tRPAREN body
   37             | tIF . tLPAREN condition if_jmp tRPAREN body else_jmp tELSE body

    tLPAREN  décalage et aller à l'état 78


État 62

   40 while_statement: tWHILE . while_loop tLPAREN condition tRPAREN while_jmp body

    $défaut  réduction par utilisation de la règle 38 (while_loop)

    while_loop  aller à l'état 79


État 63

   33 print_statement: tPRINT . tLPAREN expression tRPAREN tSEMI

    tLPAREN  décalage et aller à l'état 80


État 64

   17 return_statement: tRETURN . expression tSEMI

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 81
    function    aller à l'état 24


État 65

   31 affectation: tID . tASSIGN expression

    tASSIGN  décalage et aller à l'état 82


État 66

    3 body: tLBRACE $@1 statement_list . tRBRACE

    tRBRACE  décalage et aller à l'état 83


État 67

    9 statement_list: statement . statement_list

    tIF      décalage et aller à l'état 61
    tWHILE   décalage et aller à l'état 62
    tPRINT   décalage et aller à l'état 63
    tRETURN  décalage et aller à l'état 64
    tINT     décalage et aller à l'état 1
    tVOID    décalage et aller à l'état 2
    tID      décalage et aller à l'état 65

    $défaut  réduction par utilisation de la règle 8 (statement_list)

    statement_list             aller à l'état 84
    statement                  aller à l'état 67
    return_statement           aller à l'état 68
    function_declaration       aller à l'état 69
    affectation_statement      aller à l'état 70
    affectation_list           aller à l'état 71
    affectation                aller à l'état 72
    print_statement            aller à l'état 73
    if_statement               aller à l'état 74
    while_statement            aller à l'état 75
    int_declaration_statement  aller à l'état 76


État 68

   16 statement: return_statement .

    $défaut  réduction par utilisation de la règle 16 (statement)


État 69

   15 statement: function_declaration .

    $défaut  réduction par utilisation de la règle 15 (statement)


État 70

   10 statement: affectation_statement .

    $défaut  réduction par utilisation de la règle 10 (statement)


État 71

   28 affectation_statement: affectation_list . tSEMI

    tSEMI  décalage et aller à l'état 85


État 72

   29 affectation_list: affectation .
   30                 | affectation . tCOMMA affectation_list

    tCOMMA  décalage et aller à l'état 86

    $défaut  réduction par utilisation de la règle 29 (affectation_list)


État 73

   11 statement: print_statement .

    $défaut  réduction par utilisation de la règle 11 (statement)


État 74

   12 statement: if_statement .

    $défaut  réduction par utilisation de la règle 12 (statement)


État 75

   13 statement: while_statement .

    $défaut  réduction par utilisation de la règle 13 (statement)


État 76

   14 statement: int_declaration_statement .

    $défaut  réduction par utilisation de la règle 14 (statement)


État 77

   59 expression_list: expression tCOMMA expression_list .

    $défaut  réduction par utilisation de la règle 59 (expression_list)


État 78

   36 if_statement: tIF tLPAREN . condition if_jmp tRPAREN body
   37             | tIF tLPAREN . condition if_jmp tRPAREN body else_jmp tELSE body

    tNOT     décalage et aller à l'état 87
    tLPAREN  décalage et aller à l'état 88
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 89
    function    aller à l'état 24
    condition   aller à l'état 90


État 79

   40 while_statement: tWHILE while_loop . tLPAREN condition tRPAREN while_jmp body

    tLPAREN  décalage et aller à l'état 91


État 80

   33 print_statement: tPRINT tLPAREN . expression tRPAREN tSEMI

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 92
    function    aller à l'état 24


État 81

   17 return_statement: tRETURN expression . tSEMI
   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression

    tADD   décalage et aller à l'état 31
    tSUB   décalage et aller à l'état 32
    tMUL   décalage et aller à l'état 33
    tDIV   décalage et aller à l'état 34
    tSEMI  décalage et aller à l'état 93


État 82

   31 affectation: tID tASSIGN . expression

    tLPAREN  décalage et aller à l'état 20
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 94
    function    aller à l'état 24


État 83

    3 body: tLBRACE $@1 statement_list tRBRACE .

    $défaut  réduction par utilisation de la règle 3 (body)


État 84

    9 statement_list: statement statement_list .

    $défaut  réduction par utilisation de la règle 9 (statement_list)


État 85

   28 affectation_statement: affectation_list tSEMI .

    $défaut  réduction par utilisation de la règle 28 (affectation_statement)


État 86

   30 affectation_list: affectation tCOMMA . affectation_list

    tID  décalage et aller à l'état 65

    affectation_list  aller à l'état 95
    affectation       aller à l'état 72


État 87

   68 condition: tNOT . condition

    tNOT     décalage et aller à l'état 87
    tLPAREN  décalage et aller à l'état 88
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 89
    function    aller à l'état 24
    condition   aller à l'état 96


État 88

   50 expression: tLPAREN . expression tRPAREN
   69 condition: tLPAREN . condition tRPAREN

    tNOT     décalage et aller à l'état 87
    tLPAREN  décalage et aller à l'état 88
    tNB      décalage et aller à l'état 21
    tID      décalage et aller à l'état 22

    expression  aller à l'état 97
    function    aller à l'état 24
    condition   aller à l'état 98


État 89

   46 expression: expression . tADD expression
   47           | expression . tSUB expression
   48           | expression . tMUL expression
   49           | expression . tDIV expression
   60 condition: expression . tEQ expression
   61          | expression . tNE expression
   62          | expression . tLT expression
   63          | expression . tGT expression
   64          | expression . tGE expression
   65          | expression . tLE expression
